[Wasm-GC] wasm-b3 test config in run-jsc-stress-tests script doesn't run B3 https://bugs.webkit.org/show_bug.cgi?id=252722 rdar://106039216

Reviewed by Justin Michaud.

Adding the new BBQ baseline JIT command line option seems to have broken the
ability to enable BBQ B3 from command line in general. This patch fixes that
by restoring the previous check to --wasmBBQUsesAir, and using Air only if it
is enabled.

* Source/JavaScriptCore/wasm/WasmBBQPlan.cpp:
(JSC::Wasm::BBQPlan::planGeneratesLoopOSREntrypoints):

Canonical link: https://commits.webkit.org/260960@main